<resources>
    <string name="app_name">Climb The World</string>
    <string name="language">en_US</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_climb">Climb the building!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile">Your profile</string>
    <string name="title_activity_team_preparation">Team Preparation</string>
    <string name="title_activity_tour_detail">Tour detail</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_photo_pager_activity">Gallery</string>
    <string name="app_id">712697618765840</string>
    <string name="application_id">e9wlYQPdpXlFX3XQc9Lq0GJFecuYrDSzwVNSovvd</string>
    <string name="client_id">QVII1Qhy8pXrjAZiL07qaTKbaWpkB87zc88UMWv2</string>
    <string name="title_activity_fbshare_progress">FBShareProgressActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fbpick_friend">Invite your friends</string>
    <string name="title_activity_groups">GroupsActivity</string>
   <string name="steps"> steps (</string>
    <string name="mode">Mode: </string>
    <string name="climb_complete">Climbing: COMPLETED! (on %s)</string>
    <string name="climb_status">Climbing status: %1$s%% (last attempt: %2$s)</string>
    <string name="connection_needed">Connection needed</string>
    <string name="reward">Reward: %d XP</string>
    <string name="not_yet_microgoal">Start climbing to get the first goal</string>
    <string name="back_solo_climb">Back to Solo Climb</string>
    <string name="unlock_at_level">Unlock at level %d</string>
    <string name="lock_message">Reach level %d to unlock this building</string>
    <string name="connection_problem">Network problems</string>
    <string name="connection_problem2">Network problems: your data will be saved during next reconnection</string>
    <string name="no_fb_connection">You are not logged into Facebook</string>
    <string name="collaboration_not_exists">This collaboration does not exists anymore</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="fb_connect_invite">Login with Facebook to send invites</string>
    <string name="num_buildings">%d buildings</string>
    <string name="message_group_invite">%1$s asks you to join new group: %2$s</string>
    <string name="message_collaboration">%1$s asks help to climb %2$s</string>
    <string name="message_competition">%1$s challenges you to climb %2$s</string>
    <string name="message_team_challenge">%1$s challenges you in a team duel to climb %2$s</string>
    <string name="message_team_member">%1$s asks help to win the duel with his/her team in climbing %2$s</string>
    <string name="group_not_exists">The group does not exists anymore</string>
    <string name="group_already_part">You are already part of %s</string>
    <string name="group_completed">The group is already complete</string>
    <string name="building_occupied">Building occupied</string>
    <string name="accept_req">Request Accepted</string>
    <string name="collaboration_completed">Collaboration Completed</string>
    <string name="collaboration_already_part">You are already in this collaboration</string>
    <string name="unable_part">Unable to join</string>
    <string name="competition_not_exists">This competition does not exists anymore</string>
    <string name="competition_completed">Competition Completed</string>
    <string name="competition_already_part">You are already in this competition</string>
    <string name="team_duel_not_exists">This team duel does not exists anymore</string>
    <string name="team_duel_already_chosen">Challenger already chosen</string>
    <string name="team_duel_already">You are already the challenger</string>
    <string name="team_duel_completed">This team is completed</string>
    <string name="wait_notification">Wait for your choice to be saved</string>
    <string name="delete_req">Request Deleted</string>
    <string name="no_notifications">No notifications \n\n Tap b0 to login with Facebook then\n\n tap b1 or b2 -> "FB Notification" to download Facebook notification</string>
    <string name="team_duel_already_part">You have already joined this team</string>
    <string name="competition_end">Competition already ended</string>
    <string name="no_base_level">You have to reach level %1$d to unlock %1$s</string>
    <string name="steps_badge">Make %d steps</string>
    <string name="complete_tour">Complete the tour: %s</string>
    <string name="complete_building">Climb the %s</string>
    <string name="complete_building_name">New souvenir: %s</string>
    <string name="complete_tour_name">%s explorer</string>
    <string name="steps_badge_name">Always higher</string>
    <string name="request_sent">Request sent</string>
    <string name="request_cancelled">Request cancelled</string>
    <string name="network_error">Network error</string>
    <string name="not_logged">You\'re not currently logged to Facebook</string>
    <string name="request_arrived">Request arrived</string>
    <string name="request_deleted">Request deleted</string>
    <string name="post_published">Post published</string>
    <string name="invite_sent">Invites sent</string>
    <string name="wait">Please Wait...</string>
    <string name="loading_progress">Loading user progress...</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="no_user_defined">No user defined</string>
    <string name="settings_title">Settings</string>
    <string name="no_profile_set">No profile set yet</string>
    <string name="enter_profile">Enter your profile name</string>
    <string name="title_profile">Profile</string>
    <string name="climbing_settings">Climbing setting</string>
    <string name="title_difficulty">Difficulty</string>
    <string name="text_not_logged">Not connected to Facebook</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_button">Logout</string>
    <string name="logged_as">Hello, %s!</string>
    <string name="owner">You are the owner of this phone</string>
    <string name="level">Level: %s</string>
    <string name="climbBtn">Step\nCounter</string>
    <string name="mean_text">Average daily steps: \t %s</string>
    <string name="today_step">Today\'s steps: \t %s</string>
    <string name="profile_title">Profile</string>
    <string name="statistic_title">Statistics</string>
    <string name="results_title">Climb Results</string>
    <string name="height_text">Total height reached</string>
    <string name="pick_group">  Pick this group</string>
    <string name="io_error">Input/Output error</string>
    <string name="decode_error">Image can\'t be decoded</string>
    <string name="download_error">Downloads are denied</string>
    <string name="memory_error">Out Of Memory error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="db_error">Unable to export db: %s</string>
    <string name="add_member">    + Add member</string>
    <string name="new_group">New Group: insert a name for the group</string>
    <string name="bonus">BONUS: you climbed this building several times in the last 24h, you earn +30%</string>
    <string name="well_done">Well Done!!!!</string>
    <string name="alert_title">Sampling rate not high enough</string>
    <string name="alert_message">Your accelerometer is not fast enough for this application. Make sure to use at least %f Hz</string>
    <string name="stats_panel">%1$s of %2$s (%3$s%%)</string>
    <string name="threshold">Steps to threshold</string>
    <string name="threashold_passed">Threshold passed: you\'re in!!!!</string>
    <string name="num_steps">%s steps</string>
    <string name="no_collaboration">No collaboration available for this building</string>
    <string name="no_team_duel">No team duel available for this building"</string>
    <string name="difficulty">Difficulty: %s</string>
    <string name="no_competition">No competition available for this building</string>
    <string name="collab_no_available">This collaboration is not yet available</string>
    <string name="already_climb">Already climbed on %s</string>
    <string name="sampling_enabled">Sampling running - Stop it before exiting</string>
    <string name="social_penalty">Move up next time!</string>
    <string name="team_duel_no_available">This team duel is not yet available</string>
    <string name="your_team_won">Your team has won!\nGood job :)</string>
    <string name="other_team_won">Oh no:(\nThe challenger\'s team has won</string>
    <string name="competition_no_available">This competition is not yet available</string>
    <string name="competition_win">Yeah!!!! You win this challenge</string>
    <string name="competition_lose">You lose :(\n%s is the winner</string>
    <string name="bonus_collaboration">You have won %d" XP as bonus for your help!!!!</string>
    <string name="bonus_competition">You have won %d XP as bonus for your victory!!!!</string>
    <string name="bonus_team_duel">You have won %d XP as bonus for your help and victory!!!!</string>
    <string name="team_of">Team of </string>
    <string name="my_team">My team</string>
    	    <string name="other_team">Opponent team</string>
    <string name="ready_to_go">READY TO CLIMB!</string>
    <string name="win">CLIMBING\nCOMPLETED!</string>
    <string name="encouragement">Well Done!</string>
    <string name="microgoal_terminated">Goal completed!!!! You earn %d XP</string>
    <string name="microgoal_terminated2">Goal completed!!!! + %d XP extra</string>
    <string name="successfull_climb">You successfully climbed %1$d steps (%2$d m) of %3$s !</string>
    <string name="kicked_out">You have been kicked out! Now you\'re back to Solo Climb</string>
    <string name="new_level">Wow! You\'ve reached level %d!</string>
    <string name="new_level_inbox">New level: Level %d</string>
    <string name="new_badge">You have won a new trophy: %s</string>
    <string name="new_badge_inbox">New trophy! %s</string>
    <string name="no_microgoal">No more goal for this building</string>
    <string name="team_one">Team One</string>
    <string name="team_two">Team Two</string>
    <string name="creator">Leader: </string>
    <string name="offline_team">Go online to see the current teams or to retire</string>
    <string name="current_position">Rank</string>
    <string name="wait_team">Wait for the teams to be completed</string>
	    <string name="completed_teams">The teams are completed\nTap play to climb the building</string>
	    <string name="exit_team_btn">Exit from group</string>
	    <string name="add_members_btn">Add members</string>
	    <string name="add_challenger_btn">Add challenger</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="buildings">Buildings</string>
    <string name="tours">Tours</string>
    <string name="notifications">Notifications</string>
    <string name="trophies">Trophies</string>
    <string name="undefined">Undefined</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="groups">Groups</string>
    <string name="FB_notification">FB notifications</string>
    <string name="update">Update</string>
    <string name="microGoal">Current goal</string>
    <string name="help">Help</string>
    <string name="pick_friends">Select friends to invite</string>
    <string name="invite_btn">Invite</string>
    <string name="no_invitable">No more friends to invite\nEveryone is already playing Climb the World :)</string>
</resources>