<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity" 
    android:background="@color/white"

    >
    

    <com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp" 
        android:layout_alignParentBottom="true"/>

  <!--  <ScrollView
        android:id="@+id/scrollViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/login_button" 
        >   -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/login_button"
            android:orientation="vertical" 
            android:layout_marginRight="10dp"
    		android:layout_marginLeft="10dp"
           >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_title" 
                android:layout_weight="0.03"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3" >
<!-- com.facebook.widget.ProfilePictureView -->
                <android.widget.ProfilePictureView
                    android:id="@+id/fb_profile_picture2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:gravity="center_horizontal"
                    android:maxHeight="50dp"
                    android:maxWidth="50dp"
                    android:minHeight="50dp"
                    android:minWidth="50dp" >
                </android.widget.ProfilePictureView>
                
                <!-- facebook:preset_size="small" -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:layout_weight="0.95"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textUserName"
                        style="@style/CardText"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="Username" />

                    <TextView
                        android:id="@+id/textXP"
                        style="@style/CardText"
                                        android:textColor="@color/black"
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="XP" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textLevel"
                            style="@style/CardText"
                                            android:textColor="@color/black"
                            
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.65"
                            android:text="Level" />

                        <ProgressBar
                            android:id="@+id/progressBarLevel"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.35" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                                android:textColor="@color/black"
                
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/results_title" 
                android:layout_weight="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textCurrentValue"
                        style="@style/CardText"
                                        android:textColor="@color/black"
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="CurrentValue" />

                    <TextView
                        android:id="@+id/MyStepsText"
                        style="@style/CardText"
                                        android:textColor="@color/black"
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="MySteps" />

                    <TextView
                        android:id="@+id/textHeight"
                        style="@style/CardText"
                                        android:textColor="@color/black"
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:paddingBottom="2dp"
                        android:text="Tot Height" />

                </LinearLayout>

                <Button
                    android:id="@+id/buttonCounter"
            style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
 android:textAllCaps="true"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent"                    
                    android:text="@string/climbBtn" 
                    android:background="@drawable/button_shadow"
                    android:padding="12dp"/>
            </LinearLayout>

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                                android:textColor="@color/black"
                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/statistic_title" 
                android:layout_weight="0.3"/>

            <ListView
                android:id="@+id/listStatistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:fillViewport="true"
                android:layout_weight="16" 
                                android:textColor="@color/black"
                >
            </ListView>

           

        </LinearLayout>

 <!--     </ScrollView>  -->

</RelativeLayout>